# cupro

./: .gitignore  Dockerfile  LICENSE  README.md  apprunner.yaml  env.example  pyproject.toml  requirements.txt
docs/: Makefile  conf.py  getting-started.rst  index.rst  make.bat
reports/: hk_uni_buzz_report.html  hkis_lcms_buzz_report.html  wm_hotel_buzz_report.html
src/: main_web.py  main_web_copy.py  search.py
src/reports/: hk_uni_buzz_report.html  hkis_lcms_buzz_report_hk.html  hkis_lcms_buzz_report_row.html
tests/: test_main_web.py
